--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "extract-text-webpack-plugin": "3.0.0",
     "firebase": "4.2.0",
     "history": "4.7.2",
+    "lodash": "^4.17.5",
     "moment": "2.18.1",
     "node-sass": "4.5.3",
     "normalize.css": "7.0.0",
